--- a/style.css
+++ b/style.css
@@ -6,13 +6,16 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
+/* Home  */
+
+
 .home_nav {
     background-color: rgb(59, 73, 87);
     display: flex;
     justify-content: space-between;
     align-items: center;
     height: 11vh;
-    border-bottom: 3px solid rgb(177, 101, 209);
+    border-bottom: 2px solid rgb(177, 101, 209);
     width: 100%;
 
 }
@@ -44,6 +47,10 @@
     color: rgb(241, 239, 239);
 }
 
+
+.nav_right_a:hover {
+    color: rgb(177, 101, 209);
+}
 
 .home_header {
     background-image: url(img/showcase.jpg);
@@ -98,8 +105,349 @@
 
 .home_section_right > input {
     width: 70%;
+    border-radius: 0px 10px;
 }
 
 .home_section_right > button {
     width: 28%;
+    background-color: rgb(253, 94, 35);
+    color: white;
+    border-radius: 0px 10px;
+}
+
+.home_section_right > button:hover {
+    background-color: white;
+    color: rgb(253, 94, 35);
+    font-weight: 600;
+    cursor: pointer;
+}
+
+
+
+
+
+.footer_up {
+    display: flex;
+    justify-content: space-around;
+    font-size: 15px;
+    height: 28vh;
+}
+
+.footer_up > div {
+    /* background-color: bisque; */
+    /* border: 1px solid ; */
+    padding: 0rem 2rem;
+}
+
+.footer_up_left,
+.footer_up_middle,
+.footer_up_right {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    text-align: center;
+}
+
+.footer_up_left > img,
+.footer_up_right > img,
+.footer_up_middle > img {
+    width: 4rem;
+    height: 4rem;
+}
+
+
+
+.footer_down {
+    background-color: rgb(43, 53, 63);
+    height: 11vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-size: 12px;
+    color: white;
+}
+
+.footer_down > img {
+    width: 9rem;
+    margin-top: 0.3rem;
+}
+
+
+
+
+
+
+
+/* About  */
+
+.about_section {
+    background-color: rgb(59, 73, 87);
+    display: flex;
+    justify-content: space-between;
+    color: rgb(241, 239, 239);
+    align-items: center;
+    height: 10vh;
+   
+}
+
+.about_section_left {
+    margin-left: 1rem;
+}
+
+.about_section_left > h2 {
+    font-size: 19px;
+}
+
+.about_section_right {
+    margin-right: 1rem;
+    /* background-color: bisque; */
+    height: 2rem;
+    width: 18rem;
+}
+
+.about_section_right > input,
+.about_section_right > button {
+    height: 100%;
+}
+
+.about_section_right > input {
+    width: 70%;
+    border-radius: 0px 10px;
+}
+
+.about_section_right > button {
+    width: 28%;
+    background-color: rgb(253, 94, 35);
+    color: white;
+    border-radius: 0px 10px;
+}
+
+.about_section_right > button:hover {
+    background-color: white;
+    color: rgb(253, 94, 35);
+    font-weight: 600;
+    cursor: pointer;
+}
+
+
+
+
+
+
+.about_main {
+    height: 68.5vh;
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
+    background-color:rgb(241, 239, 239);
+}
+
+.about_main_left {
+    width: 70%;
+    /* background-color: bisque; */
+    padding: 2rem;
+}
+
+.about_main_right {
+    width: 28%;
+    /* background-color: bisque;    */
+    padding: 2rem;
+    background-color: rgb(43, 53, 63);
+    height: 50%;
+    margin-top: 3.5rem;
+    color: rgb(241, 239, 239);
+    margin-right: 1.7rem;
+    padding-top: 1rem;
+    border-radius: 0px 20px;
+}
+
+.about_main_left > p,
+.about_main_right > p {
+    text-align: justify;
+    margin-top: 1rem;
+
+}
+
+
+.about_main_left_p2 {
+    background-color: rgb(43, 53, 63);
+    color: rgb(241, 239, 239);
+    padding: 1rem;
+    border-radius: 0px 20px;
+}
+
+.about_main_left > h2 {
+    background-color: rgb(43, 53, 63);
+    width: 6.5rem;
+    color: rgb(241, 239, 239);
+    padding: 0.5rem;
+    font-size: 20px;
+    border-radius: 0px 10px;
+    font-weight: 500;
+    text-align: center;
+}
+
+
+
+
+
+
+
+
+
+
+/************* Services  */
+
+.services_section {
+    background-color: rgb(59, 73, 87);
+    display: flex;
+    justify-content: space-between;
+    color: rgb(241, 239, 239);
+    align-items: center;
+    height: 10vh;
+   
+}
+
+.services_section_left {
+    margin-left: 1rem;
+}
+
+.services_section_left > h2 {
+    font-size: 19px;
+}
+
+.services_section_right {
+    margin-right: 1rem;
+    /* background-color: bisque; */
+    height: 2rem;
+    width: 18rem;
+}
+
+.services_section_right > input,
+.services_section_right > button {
+    height: 100%;
+}
+
+.services_section_right > input {
+    width: 70%;
+    border-radius: 0px 10px;
+}
+
+.services_section_right > button {
+    width: 28%;
+    background-color: rgb(253, 94, 35);
+    color: white;
+    border-radius: 0px 10px;
+}
+
+.services_section_right > button:hover {
+    background-color: white;
+    color: rgb(253, 94, 35);
+    font-weight: 600;
+    cursor: pointer;
+}
+
+
+
+
+
+.services_main {
+    height: 68vh;
+    display: flex;
+    
+}
+
+
+.services_main_left {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    width: 65%;
+    /* background-color: aquamarine; */
+    padding: 0rem 2rem;
+}
+
+.services_main_right {
+    width: 33%;
+}
+
+.services_main_left > div {
+    background-color: rgb(240, 239, 239);
+    padding: 1rem;
+    border-radius: 0px 20px;
+    /* border: 1px solid rgb(177, 101, 209); */
+}
+
+.services_main_left > div > p {
+    margin-top: 1rem;
+}
+
+
+#services_main_left_div-first {
+    width: 7rem;
+    border-radius: 0px 10px;
+}
+
+
+
+
+
+
+
+.services_main_right {
+    background-color: rgb(59, 73, 87);
+    height: 66%;
+    color: rgb(248, 246, 246);
+    margin-top: 5%;
+    
+    /* display: flex;
+    flex-direction: column;
+    justify-content: space-around; */
+    padding: 1rem;
+    border-radius: 0px 20px;
+}
+
+.services_main_right_form {
+    margin-top: 1rem;
+    /* background-color: bisque; */
+    width: 100%;
+    font-size: 15px;
+}
+
+.services_main_right_form > input,
+.services_main_right_form > textarea {
+    width: 70%;
+    margin-bottom: 0.5rem;
+    resize: none;
+    border-radius: 0px 10px;
+}
+
+.services_main_right_form > input {
+    height: 1.8rem;
+}
+
+.services_form_submit {
+    background-color: rgb(253, 94, 35);
+    color: white;
+    width: 6rem;
+    height: 2rem;
+    border-radius: 0px 10px;
+    margin-left: 25%;
+    transition: all 500ms;
+    font-size: 15px;
+}
+
+
+.services_form_submit:hover {
+    background-color: white;
+    color: rgb(253, 94, 35);
+    width: 6.5rem;
+    height: 2.1rem;
+    transition: all 500ms;
+    font-weight: 700;
+    font-size: 17px;
+    cursor: pointer;
+
 }
